tests/negative/test_cast_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    sym f:Foo;
    cast (Foo cn) f;
};